# shell-alias-collections

./: .darglint  .gitignore  .lintro-config.yaml  .lintro-ignore  .markdownlint-cli2.jsonc  .markdownlintignore  .prettierignore  .semgrepignore  CONTRIBUTING.md  LICENSE  README.md  SOURCES.md  biome.json  manifest.json  package.json  pyproject.toml  renovate.json
.github/: CODEOWNERS  labeler.yml
.github/workflows/: README.md  dependency-review.yml  pr-auto-assign.yml  pr-labeler.yml  quality-lint.yml  release-auto-tag.yml  release-pr.yml  release-publish.yml  scorecards.yml  semantic-pr-title.yml  validate-action-pinning.yml  validate.yml
collections/curated/: file-operations.json  git-essentials.json  navigation.json  network.json  safety.json  system-admin.json
collections/omz/: brew.json  bundler.json  common-aliases.json  docker-compose.json  docker.json  git.json  golang.json  kubectl.json  macos.json  npm.json  pip.json  python.json  rails.json  rsync.json  systemd.json  terraform.json  tmux.json  ubuntu.json  yarn.json
scripts/: sync_omz.py
scripts/ci/: README.md  assign-codeowner.sh  check-version-change.sh  create-release-pr.sh  create-release-tag.sh  guard-release-commit.sh  post-lint-comment.sh  publish-github-release.sh  run-lintro.sh  semantic-pr-title-check.sh  update-manifest-version.sh  validate-action-pinning.sh  validate-collection-files.sh  validate-json-syntax.sh  validate-manifest-structure.sh  version-bump.sh
